--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ p  {
 
 <p style="text-align:center;"> <a href="Gallery.html"><img src="gallery.jpg" alt="Click to enter"> </p>
 
-<p style="text-align:center;"> <a href="Credits.html"><img src="credits.jpg" alt="Click to enter"> </p>
+<p style="text-align:center;"> <a href="Credits.html"><img src="Credits.jpg" alt="Click to enter"> </p>
 
 </body>
 </html>
