--- a/about.html
+++ b/about.html
@@ -34,4 +34,4 @@ p  {
 
 <p style="text-align:center;"><img src="Surf.jpg"> </p>
 
-<p style="text-align:center;"> <a href="index.html"><img src="back.jpg" alt="Click to enter"> </p>
+<p style="text-align:center;"> <a href="index.html"><img src="Back.jpg" alt="Click to enter"> </p>
