--- a/Credits.html
+++ b/Credits.html
@@ -11,11 +11,13 @@ body {
 
 
 <p style="text-align:center;"><img src="credit1.jpg"> </p>
+  
 <p style="text-align:center;"><img src="credit2.jpg"> </p>
+  
 <p style="text-align:center;"><img src="credit3.jpg"> </p>
 
 
-<p style="text-align:center;"> <a href="index.html"><img src="back.jpg" alt="Click to enter"> </p>
+<p style="text-align:center;"> <a href="index.html"><img src="Back.jpg" alt="Click to enter"> </p>
 
 
 </body>
