--- a/index.html
+++ b/index.html
@@ -28,18 +28,16 @@ p  {
 </style>
 </head>
 <body>
+ 
 
 <p style="text-align:center;"><img src="Welcome.jpg"> </p>
 
-<p style="text-align:center;"><img src="Select.jpg"> </p>
-  
-<hr>
-  
-<p style="text-align:center;"> <a href="about.html"><img src="About.jpg" alt="Click to enter"> </p>
+<p style="text-align:center;"><img src="Select2.jpg"> </p>
+<p style="text-align:center;"><img src="Renders.jpg"> </p>
+<p style="text-align:center;"><img src="Meme.jpg"> </p>
+<p style="text-align:center;"><img src="Glitch.jpg"> </p>
+<p style="text-align:center;"> <a href="credits.html"><img src="Credits.jpg" alt="Click to enter"> </p>
 
-<p style="text-align:center;"> <a href="Gallery.html"><img src="gallery.jpg" alt="Click to enter"> </p>
 
-<p style="text-align:center;"> <a href="Credits.html"><img src="Credits.jpg" alt="Click to enter"> </p>
-  
 </body>
 </html>
