--- a/index.html
+++ b/index.html
@@ -31,12 +31,15 @@ p  {
  
 
 <p style="text-align:center;"><img src="Welcome.jpg"> </p>
-
 <p style="text-align:center;"><img src="Select2.jpg"> </p>
-<p style="text-align:center;"><img src="Renders.jpg"> </p>
-<p style="text-align:center;"><img src="Meme.jpg"> </p>
+
+<hr>
+
 <p style="text-align:center;"><img src="Glitch.jpg"> </p>
-<p style="text-align:center;"> <a href="credits.html"><img src="Credits.jpg" alt="Click to enter"> </p>
+<p style="text-align:center;"><img src="Meme.jpg"> </p>
+<p style="text-align:center;"><img src="Minecraft.jpg"> </p>
+<p style="text-align:center;"><img src="Renders.jpg"> </p>
+<p style="text-align:center;"><img src="NetArt.jpg"> </p>
 
 
 </body>
