--- a/index.html
+++ b/index.html
@@ -36,11 +36,27 @@ p  {
 <hr>
 
 <p style="text-align:center;"><img src="Glitch.jpg"> </p>
+
+
+<a href="Glitch.html">
+    <img src="Glitch.jpg" alt="Click to enter">
+
 <p style="text-align:center;"><img src="Meme.jpg"> </p>
-<p style="text-align:center;"><img src="Minecraft.jpg"> </p>
+
+<a href="Memes.html">
+    <img src="Meme.jpg" alt="Click to enter">
+
+<p MINECRAFT HERE </p>
+
 <p style="text-align:center;"><img src="Renders.jpg"> </p>
+
+<a href="Renders.html">
+    <img src="Renders.jpg" alt="Click to enter">
+
 <p style="text-align:center;"><img src="NetArt.jpg"> </p>
 
+<a href="NetArt.html">
+    <img src="NetArt.jpg" alt="Click to enter">
 
 </body>
 </html>
