--- a/Glitch.html
+++ b/Glitch.html
@@ -25,12 +25,59 @@ p  {
   font-size: 160%;
 }
 
+
+h2 {
+  color:MintCream;
+  font-family: verdana;
+  font-size: 300%;
+
+}
+p  {
+  color:MintCream;
+  font-family: verdana;
+  font-size: 160%;
+}
+
+h3 {
+  color:MintCream;
+  font-family: verdana;
+  font-size: 300%;
+
+}
+p  {
+  color:MintCream;
+  font-family: verdana;
+  font-size: 160%;
+}
 </style>
 </head>
 <body>
-  
-<p style="text-align:center;"><img src="Meeting.jpg">
+
+<h1> <p style="text-align:center;">Glitch 1 </h1>
+<p style="text-align:center;"> We are introduced to Jack Delroy, the "hero" of the story and the theme of the glitch pieces. During a segment, he shows a book entitled, "Conversations with the devil" to his audience and us (the viewers). To make this glitch image, I used "Studio Fade out" as an irony (as the movie is set in a live studio audience) and a "reverb". It was show the super-natural horrors what will come later in the movie and we learn about his secret pasts, hence the 3 heads appearing.</p>
+
+<p style="text-align:center;"><img src="LNWTD - BAD BOOK.jpg" alt="Image">
+
 <hr>
-<p style="text-align:center;"><img src="Surf.jpg"> </p>
+
+<h2> <p style="text-align:center;">Glitch 2</h2>
+<p>We see that Jack starts to going revives his past moments but not before a shocking twist that appears later in the movie. For this image, I used ECHO, DISTORTION, and a bit of FADE OUT. I tried to attempt to show that his world and career are going to change for the worse as the dark background begins to "close on him" while the glitch art on Jack is to show what little sanity he has brought among himself..</p>
+
+ <p style="text-align:center;"><img src="LNWTD - FLASH 222 copy.jpg" alt="Image2">
+
 <hr>
-<p style="text-align:center;"> <a href="index.html"><img src="Back.jpg" alt="Click to enter"> </p>
+
+<h2> <p style="text-align:center;">Glitch 3 </h2>
+<p><p style="text-align:center;">We see Jack just acted upon a terrible act and is horrified to learn what he has done. In order to create this glitch, I played around with the ECHO effect and simply portray him as in vain and show the shocking nature of the scene. Admittedly, the scene was my favorite piece to make out of the 3 glitch images.
+
+</p>
+
+<p style="text-align:center;"> <img src="LNWTD - SCREAM.jpg" alt="Image3">
+
+
+<p style="text-align:center;"> <a href="index.html">
+<img src="Back.jpg" alt="Click to enter"> </p>
+
+
+</body>
+</html>
