--- a/index.html
+++ b/index.html
@@ -35,27 +35,18 @@ p  {
 
 <hr>
 
-<p style="text-align:center;"><img src="Glitch.jpg"> </p>
-
-
-<a href="Glitch.html">
+<p style="text-align:center;"><a href="Glitch.html">
     <img src="Glitch.jpg" alt="Click to enter">
 
-<p style="text-align:center;"><img src="Meme.jpg"> </p>
-
-<a href="Memes.html">
+<p style="text-align:center;"><a href="Memes.html">
     <img src="Meme.jpg" alt="Click to enter">
 
 <p MINECRAFT HERE </p>
 
-<p style="text-align:center;"><img src="Renders.jpg"> </p>
-
-<a href="Renders.html">
+<p style="text-align:center;"><a href="Renders.html">
     <img src="Renders.jpg" alt="Click to enter">
 
-<p style="text-align:center;"><img src="NetArt.jpg"> </p>
-
-<a href="NetArt.html">
+<p style="text-align:center;"><a href="NetArt.html">
     <img src="NetArt.jpg" alt="Click to enter">
 
 </body>
