--- a/Renders.html
+++ b/Renders.html
@@ -9,16 +9,63 @@ body {
 </head>
 <body>
 
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+h1 {
+  color:MintCream;
+  font-family: verdana;
+  font-size: 300%;
 
-<p style="text-align:center;"><img src="Select2.jpg"> </p>
+}
+p  {
+  color:MintCream;
+  font-family: verdana;
+  font-size: 160%;
+}
+
+
+h2 {
+  color:MintCream;
+  font-family: verdana;
+  font-size: 300%;
+
+}
+p  {
+  color:MintCream;
+  font-family: verdana;
+  font-size: 160%;
+}
+
+h3 {
+  color:MintCream;
+  font-family: verdana;
+  font-size: 300%;
+
+}
+p  {
+  color:MintCream;
+  font-family: verdana;
+  font-size: 160%;
+}
+</style>
+</head>
+<body>
+
+<h1> <p style="text-align:center;"> Renders </h1>
+<p Renders made by BLENDER </p>
+
+<p style="text-align:center;"><img src="Render1 copy.jpg" alt="Image">
+
 <hr>
-<p style="text-align:center;"><img src="Renders.jpg"> </p>
-  <hr>
-<p style="text-align:center;"><img src="Meme.jpg"> </p>
-  <hr>
-<p style="text-align:center;"><img src="Glitch.jpg"> </p>
-  <hr>
-<p style="text-align:center;"> <a href="index.html"><img src="Back.jpg" alt="Click to enter"> </p>
+
+ <p style="text-align:center;"><img src="Render2.jpg" alt="Image2">
+
+<hr>
+
+<p style="text-align:center;"> <a href="index.html">
+<img src="Back.jpg" alt="Click to enter"> </p>
 
 
 </body>
