--- a/NetArt.html
+++ b/NetArt.html
@@ -1,1 +1,72 @@
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+body {
+  background-image: url('BackgroundHome.jpg');
+}
+</style>
+</head>
+<body>
 
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+h1 {
+  color:MintCream;
+  font-family: verdana;
+  font-size: 300%;
+
+}
+p  {
+  color:MintCream;
+  font-family: verdana;
+  font-size: 160%;
+}
+
+
+h2 {
+  color:MintCream;
+  font-family: verdana;
+  font-size: 300%;
+
+}
+p  {
+  color:MintCream;
+  font-family: verdana;
+  font-size: 160%;
+}
+
+h3 {
+  color:MintCream;
+  font-family: verdana;
+  font-size: 300%;
+
+}
+p  {
+  color:MintCream;
+  font-family: verdana;
+  font-size: 160%;
+}
+</style>
+</head>
+<body>
+
+<h1> <p style="text-align:center;"> NET ART 2025 </h1>
+<p Link: https://sjsusm.github.io/SMNetArt.github.io/index.html </p>
+
+<p style="text-align:center;"><img src="Net1.jpg" alt="Image">
+
+<hr>
+
+ <p style="text-align:center;"><img src="Net2.jpg" alt="Image2">
+
+<hr>
+
+ <p style="text-align:center;"><img src="Net3.jpg" alt="Image3">
+
+<p style="text-align:center;"> <a href="index.html">
+<img src="Back.jpg" alt="Click to enter"> </p>
+</body>
+</html>
