--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@ p  {
 <p style="text-align:center;"><a href="Memes.html">
     <img src="Meme.jpg" alt="Click to enter">
 
-<p MINECRAFT HERE </p>
+<p style="text-align:center;"><a href="Minecraft.html">
+    <img src="LogoMinecraft.jpg" alt="Click to enter">
+
 
 <p style="text-align:center;"><a href="Renders.html">
     <img src="Renders.jpg" alt="Click to enter">
