--- a/Memes.html
+++ b/Memes.html
@@ -53,24 +53,18 @@ p  {
 </head>
 <body>
 
-<h1> <p style="text-align:center;">Mash Up 1 </h1>
-<p><p style="text-align:center;">As a fan of Squid Game, I was pleased to hear that the second season was announced but I haven't sat down and watched it yet. However, when I saw the "smiling and unsmiling" meme floating around, I was Immediately reminded of a scene from Spongebob. This was a quick meme to edit as I only only cropped the 2 images and fixed the lighting of each photos as they were a tad bit dark. </p>
+<p style="text-align:center;"><img src="Meme.jpg" alt="Logo">
+
+<p><p style="text-align:center;"> Used Photoshop and edited various images from "Dandadan"
+(2024),"Squid Game" (2021),"The Real Housewives of Beverly Hills"(2010),"SpongeBob Squarepants" (1993), and "Sonic The Hedgehog CD"(1993). Meme Mashup was a fun project to make. While the memes are presented in "if you know, you know" format, it still made people laugh despite having no context. </p>
 
 <p style="text-align:center;"><img src="Meme 1 - Squid Game _ Spongebob .JPG" alt="Image">
 
 <hr>
 
-<h2> <p style="text-align:center;">Mash Up 2</h2>
-<p><p style="text-align:center;">Admittedly, I'm very particular when it comes to watching anime but my friends had introduced me to a new series, Dandadan (2021). After reading the story's plot, I was reminded of the classic meme so this piece is for "if you know, you know" fans. Turbo Granny (The Cat) and the golden "orb" was simple to do but adding the 2 human characters, Ken Takakura and Momo Ayase, to match the meme pose was a bit hard as I was very unfamiliar with the series. After finding the right pose, I was able to crop and edit the picture. The edit is so minor, you can't even see it unless you're familiar of the series / recognize the scene taking place. </p>
-
  <p style="text-align:center;"><img src="Meme 2 - Dandadan _ Yelling Cat meme .JPG" alt="Image2">
 
 <hr>
-
-<h2><p style="text-align:center;"> Mash Up 3 </h2>
-<p><p style="text-align:center;">At the time of this post, I've created a little valentine's inspired meme. Interestingly, today marks 5 years of the release of the first Sonic The Hedgehog movie and the forth movie will center Metal Sonic and Amy Rose so it fits the theme pretty well. Like my last meme, this too required a bit of more work (finding the background for a blank template + crop and resize 4 different images while being semi faithful to the series and meme) 
-
-</p>
 
  <p style="text-align:center;"><img src="Meme 3 - Sonic CD _ You vs them .jpg" alt="Image3">
 
