--- a/Minecraft.html
+++ b/Minecraft.html
@@ -1,1 +1,72 @@
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+body {
+  background-image: url('BackgroundHome.jpg');
+}
+</style>
+</head>
+<body>
 
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+h1 {
+  color:MintCream;
+  font-family: verdana;
+  font-size: 300%;
+
+}
+p  {
+  color:MintCream;
+  font-family: verdana;
+  font-size: 160%;
+}
+
+
+h2 {
+  color:MintCream;
+  font-family: verdana;
+  font-size: 300%;
+
+}
+p  {
+  color:MintCream;
+  font-family: verdana;
+  font-size: 160%;
+}
+
+h3 {
+  color:MintCream;
+  font-family: verdana;
+  font-size: 300%;
+
+}
+p  {
+  color:MintCream;
+  font-family: verdana;
+  font-size: 160%;
+}
+</style>
+</head>
+<body>
+
+<p style="text-align:center;"><img src="LogoMinecraft.jpg" alt="Logo">
+
+<p><p style="text-align:center;"> Used the mobile version of "Minecraft" via IPhone 12 for creating the artwork. Though not an avid player of "Minecraft" (2011) and despite having issues the first time on the computer, it was very a relaxing game. Below are 2 characters created during Creative Mode: "Peppino Spaghetti" from "Pizza Tower" (2023)and a "Creeper". </p>
+
+<p style="text-align:center;"><img src="SmallPepi.jpg" alt="Image">
+
+<hr>
+
+ <p style="text-align:center;"><img src="SmallCreep.jpg" alt="Image2">
+
+
+<p style="text-align:center;"> <a href="index.html">
+<img src="Back.jpg" alt="Click to enter"> </p>
+
+
+</body>
+</html>
