--- a/NetArt.html
+++ b/NetArt.html
@@ -53,8 +53,15 @@ p  {
 </head>
 <body>
 
-<h1> <p style="text-align:center;"> NET ART 2025 </h1>
-<p Link: https://sjsusm.github.io/SMNetArt.github.io/index.html </p>
+<p style="text-align:center;"><img src="NetArt.jpg" alt="Logo">
+
+
+<p style="text-align:center;"> “NET ART 2025” is a point and click story time experience and  focuses on the artist’s feelings about art and technology (both the good and bad side).The story also includes self-awareness humor, memes, and a "lively banner" to feel comfy while reading.“NET ART 2025” parodies an internet / digital diary like LiveJournal and Wordpress and attempt to mimic the early 2000’s internet era. </p>
+
+<p style="text-align:center;"> Click the link below to view the NET ART: </p>
+
+<p style="text-align:center;"> https://sjsusm.github.io/SMNetArt.github.io/index.html </p>
+
 
 <p style="text-align:center;"><img src="Net1.jpg" alt="Image">
 
@@ -68,5 +75,7 @@ p  {
 
 <p style="text-align:center;"> <a href="index.html">
 <img src="Back.jpg" alt="Click to enter"> </p>
+
+
 </body>
 </html>
