--- a/index.html
+++ b/index.html
@@ -31,25 +31,25 @@ p  {
  
 
 <p style="text-align:center;"><img src="Welcome.jpg"> </p>
-<p style="text-align:center;"><img src="Select2.jpg"> </p>
+<p style="text-align:center;"><img src="Select.jpg"> </p>
 
 <hr>
 
 <p style="text-align:center;"><a href="Glitch.html">
-    <img src="Glitch.jpg" alt="Click to enter">
+    <img src="NewGlitchLogo.jpg" alt="Click to enter">
 
 <p style="text-align:center;"><a href="Memes.html">
-    <img src="Meme.jpg" alt="Click to enter">
+    <img src="NewMemeLogo.jpg" alt="Click to enter">
 
 <p style="text-align:center;"><a href="Minecraft.html">
-    <img src="LogoMinecraft.jpg" alt="Click to enter">
+    <img src="ANewMinecraft.jpg" alt="Click to enter">
 
 
 <p style="text-align:center;"><a href="Renders.html">
-    <img src="Renders.jpg" alt="Click to enter">
+    <img src="RenderLogo.jpg" alt="Click to enter">
 
 <p style="text-align:center;"><a href="NetArt.html">
-    <img src="NetArt.jpg" alt="Click to enter">
+    <img src="NETART LOGO.jpg" alt="Click to enter">
 
 </body>
 </html>
