--- a/Glitch.html
+++ b/Glitch.html
@@ -53,7 +53,7 @@ p  {
 </head>
 <body>
 
-<p style="text-align:center;"><img src="Glitch.jpg" alt="Logo">
+<p style="text-align:center;"><img src="NewGlitchLogo.jpg" alt="Logo">
 
 <p style="text-align:center;"> Used "Audacity" and 3 movie stills from the horror/ supernatural / thriller film called "Late Night with the Devil"(2023) by Colin and Cameron Cairnes. The movie "follows" the events of a late talk night show episode that “aired” on halloween night of 1977. Due to the nature of the movie, I attempted to portray the madness and confusion that the protagonist was going through. </p>
 
