--- a/Memes.html
+++ b/Memes.html
@@ -53,7 +53,7 @@ p  {
 </head>
 <body>
 
-<p style="text-align:center;"><img src="Meme.jpg" alt="Logo">
+<p style="text-align:center;"><img src="NewMemeLogo.jpg" alt="Logo">
 
 <p><p style="text-align:center;"> Used Photoshop and edited various images from "Dandadan"
 (2024),"Squid Game" (2021),"The Real Housewives of Beverly Hills"(2010),"SpongeBob Squarepants" (1993), and "Sonic The Hedgehog CD"(1993). Meme Mashup was a fun project to make. While the memes are presented in "if you know, you know" format, it still made people laugh despite having no context. </p>
