--- a/Minecraft.html
+++ b/Minecraft.html
@@ -3,6 +3,7 @@
 <head>
 <style>
 body {
+  background-image: url('MinecraftPage.jpg');
   background-image: url('BackgroundHome.jpg');
 }
 </style>
@@ -53,9 +54,9 @@ p  {
 </head>
 <body>
 
-<p style="text-align:center;"><img src="LogoMinecraft.jpg" alt="Logo">
+<p style="text-align:center;"><img src="ANewMinecraft.jpg" alt="Logo">
 
-<p><p style="text-align:center;"> Used the mobile version of "Minecraft" via IPhone 12 for creating the artwork. Though not an avid player of "Minecraft" (2011) and despite having issues the first time on the computer, it was very a relaxing game. Below are 2 characters created during Creative Mode: "Peppino Spaghetti" from "Pizza Tower" (2023)and a "Creeper". </p>
+<p><p style="text-align:center;"> Used the mobile version of "Minecraft" via IPhone 12 for creating the 2 artworks (shown below). Though not an avid player of "Minecraft" (2011) and despite having issues the first time on the computer, it was very a relaxing game. Below are 2 characters created during Creative Mode: "Peppino Spaghetti" from "Pizza Tower" (2023) and a "Creeper". </p>
 
 <p style="text-align:center;"><img src="SmallPepi.jpg" alt="Image">
 
