--- a/NetArt.html
+++ b/NetArt.html
@@ -53,15 +53,13 @@ p  {
 </head>
 <body>
 
-<p style="text-align:center;"><img src="NetArt.jpg" alt="Logo">
-
+<p style="text-align:center;"><img src="NETART LOGO.jpg" alt="Logo">
 
 <p style="text-align:center;"> “NET ART 2025” is a point and click story time experience and  focuses on the artist’s feelings about art and technology (both the good and bad side).The story also includes self-awareness humor, memes, and a "lively banner" to feel comfy while reading.“NET ART 2025” parodies an internet / digital diary like LiveJournal and Wordpress and attempt to mimic the early 2000’s internet era. </p>
 
 <p style="text-align:center;"> Click the link below to view the NET ART: </p>
 
 <p style="text-align:center;"> https://sjsusm.github.io/SMNetArt.github.io/index.html </p>
-
 
 <p style="text-align:center;"><img src="Net1.jpg" alt="Image">
 
