--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@ p  {
 
 <hr>
 
+<p style="text-align:center;"><a href="about.html">
+    <img src="AboutLOGO.jpg" alt="Click to enter">
+
 <p style="text-align:center;"><a href="Glitch.html">
     <img src="NewGlitchLogo.jpg" alt="Click to enter">
 
