--- a/about.html
+++ b/about.html
@@ -3,7 +3,6 @@
 <head>
 <style>
 body {
-  background-image: url('MinecraftPage.jpg');
   background-image: url('BackgroundHome.jpg');
 }
 </style>
@@ -54,10 +53,7 @@ p  {
 </head>
 <body>
 
-<p style="text-align:center;"><img src="Meeting.jpg" alt="Logo">
-
-</body>
-</html>
+<p style="text-align:center;"><img src="AboutLOGO.jpg" alt="Logo">
 
 <!DOCTYPE html>
 <html>
@@ -67,57 +63,57 @@ ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
-  width: 200px;
-  background-color: #f1f1f1;
-  border: 1px solid #555;
+  overflow: hidden;
+  background-color: #333;
+}
+
+li {
+  float: left;
+  border-right:1px solid #bbb;
+}
+
+li:last-child {
+  border-right: none;
 }
 
 li a {
   display: block;
-  color: #000;
-  padding: 8px 16px;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
   text-decoration: none;
 }
 
-li {
-  text-align: center;
-  border-bottom: 1px solid #555;
-}
-
-li:last-child {
-  border-bottom: none;
-}
-
-li a.active {
-  background-color: #04AA6D;
-  color: White;
-}
-
 li a:hover:not(.active) {
-  background-color: #555;
-  color: white;
+  background-color: #111;
+}
+
+.active {
+  background-color: #04AA6D;
 }
 </style>
 </head>
 <body>
 
-<h2>Shari is a SJSU student, working on BFA: Digital Media Art</h2>
-<p>Click the tabs below to view and navigate Shari's website .</p>
-
 <ul>
- <li><a class="Home"><a href="index.html">Home</a></li>
+   <li><a href="index.html">Home</a></li>
+  
+ <li><a href="Glitch.html">Glitch Art</a></li>
  
- <li><a class="Glitch"><a href="Glitch.html">Glitch Art</a></li>
+ <li><a href="Memes.html">Meme MashUp</a></li>
  
- <li><a class="Meme MashUp"><a href="Memes.html">Meme MashUp</a></li>
+ <li><a href="Minecraft.html">Minecraft</a></li>
  
- <li><a class="Minecraft"><a href="Minecraft.html">Minecraft</a></li>
+ <li><a href="NetArt.html">NetArt</a></li>
  
- <li><a class="Renders"><a href="Renders.html">Renders</a></li>
- 
- <li><a class="NetArt"><a href="NetArt.html">NetArt</a></li>
- 
+  <li><a href="about.html">About</a></li>
+
 </ul>
+
+<p style="text-align:center;"> This is Shari's portfolio website! She is currently working on her BFA: Digital Art Media at SJSU and hopes to one day work in the art field professionally. Her hobbies include listening to music, drawings, playing video games, and making funny memes. Thanks for visiting her profolio website! </p>
+
+<p style="text-align:center;"><img src="SonicIcon.jpg" alt="Image">
+
 
 </body>
 </html>
