--- a/Glitch.html
+++ b/Glitch.html
@@ -55,6 +55,64 @@ p  {
 
 <p style="text-align:center;"><img src="NewGlitchLogo.jpg" alt="Logo">
 
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+}
+
+li {
+  float: left;
+  border-right:1px solid #bbb;
+}
+
+li:last-child {
+  border-right: none;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover:not(.active) {
+  background-color: #111;
+}
+
+.active {
+  background-color: #04AA6D;
+}
+</style>
+</head>
+<body>
+
+<ul>
+   <li><a href="index.html">Home</a></li>
+  
+ <li><a href="Glitch.html">Glitch Art</a></li>
+ 
+ <li><a href="Memes.html">Meme MashUp</a></li>
+ 
+ <li><a href="Minecraft.html">Minecraft</a></li>
+ 
+ <li><a href="NetArt.html">NetArt</a></li>
+ 
+  <li><a href="about.html">About</a></li>
+
+</ul>
+
+</body>
+</html>
+
 <p style="text-align:center;"> Used "Audacity" and 3 movie stills from the horror/ supernatural / thriller film called "Late Night with the Devil"(2023) by Colin and Cameron Cairnes. The movie "follows" the events of a late talk night show episode that “aired” on halloween night of 1977. Due to the nature of the movie, I attempted to portray the madness and confusion that the protagonist was going through. </p>
 
 
@@ -66,9 +124,6 @@ p  {
 <hr>
 
 <p style="text-align:center;"> <img src="LNWTD - SCREAM.jpg" alt="Image3">
-
-<p style="text-align:center;"> <a href="index.html">
-<img src="Back.jpg" alt="Click to enter"> </p>
 
 </body>
 </html>
