--- a/Memes.html
+++ b/Memes.html
@@ -55,6 +55,64 @@ p  {
 
 <p style="text-align:center;"><img src="NewMemeLogo.jpg" alt="Logo">
 
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+}
+
+li {
+  float: left;
+  border-right:1px solid #bbb;
+}
+
+li:last-child {
+  border-right: none;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover:not(.active) {
+  background-color: #111;
+}
+
+.active {
+  background-color: #04AA6D;
+}
+</style>
+</head>
+<body>
+
+<ul>
+   <li><a href="index.html">Home</a></li>
+  
+ <li><a href="Glitch.html">Glitch Art</a></li>
+ 
+ <li><a href="Memes.html">Meme MashUp</a></li>
+ 
+ <li><a href="Minecraft.html">Minecraft</a></li>
+ 
+ <li><a href="NetArt.html">NetArt</a></li>
+ 
+  <li><a href="about.html">About</a></li>
+
+</ul>
+
+</body>
+</html>
+
 <p><p style="text-align:center;"> Used Photoshop and edited various images from "Dandadan"
 (2024),"Squid Game" (2021),"The Real Housewives of Beverly Hills"(2010),"SpongeBob Squarepants" (1993), and "Sonic The Hedgehog CD"(1993). Meme Mashup was a fun project to make. While the memes are presented in "if you know, you know" format, it still made people laugh despite having no context. </p>
 
@@ -67,11 +125,6 @@ p  {
 <hr>
 
  <p style="text-align:center;"><img src="Meme 3 - Sonic CD _ You vs them .jpg" alt="Image3">
-
-
-<p style="text-align:center;"> <a href="index.html">
-<img src="Back.jpg" alt="Click to enter"> </p>
-
 
 </body>
 </html>
