--- a/Minecraft.html
+++ b/Minecraft.html
@@ -56,6 +56,64 @@ p  {
 
 <p style="text-align:center;"><img src="ANewMinecraft.jpg" alt="Logo">
 
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+}
+
+li {
+  float: left;
+  border-right:1px solid #bbb;
+}
+
+li:last-child {
+  border-right: none;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover:not(.active) {
+  background-color: #111;
+}
+
+.active {
+  background-color: #04AA6D;
+}
+</style>
+</head>
+<body>
+
+<ul>
+   <li><a href="index.html">Home</a></li>
+  
+ <li><a href="Glitch.html">Glitch Art</a></li>
+ 
+ <li><a href="Memes.html">Meme MashUp</a></li>
+ 
+ <li><a href="Minecraft.html">Minecraft</a></li>
+ 
+ <li><a href="NetArt.html">NetArt</a></li>
+ 
+  <li><a href="about.html">About</a></li>
+
+</ul>
+
+</body>
+</html>
+
 <p><p style="text-align:center;"> Used the mobile version of "Minecraft" via IPhone 12 for creating the 2 artworks (shown below). Though not an avid player of "Minecraft" (2011) and despite having issues the first time on the computer, it was very a relaxing game. Below are 2 characters created during Creative Mode: "Peppino Spaghetti" from "Pizza Tower" (2023) and a "Creeper". </p>
 
 <p style="text-align:center;"><img src="SmallPepi.jpg" alt="Image">
@@ -63,11 +121,6 @@ p  {
 <hr>
 
  <p style="text-align:center;"><img src="SmallCreep.jpg" alt="Image2">
-
-
-<p style="text-align:center;"> <a href="index.html">
-<img src="Back.jpg" alt="Click to enter"> </p>
-
 
 </body>
 </html>
