--- a/Renders.html
+++ b/Renders.html
@@ -54,6 +54,65 @@ p  {
 <body>
 
 <p style="text-align:center;"><img src="RenderLogo.jpg" alt="logo">
+
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+}
+
+li {
+  float: left;
+  border-right:1px solid #bbb;
+}
+
+li:last-child {
+  border-right: none;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover:not(.active) {
+  background-color: #111;
+}
+
+.active {
+  background-color: #04AA6D;
+}
+</style>
+</head>
+<body>
+
+<ul>
+   <li><a href="index.html">Home</a></li>
+  
+ <li><a href="Glitch.html">Glitch Art</a></li>
+ 
+ <li><a href="Memes.html">Meme MashUp</a></li>
+ 
+ <li><a href="Minecraft.html">Minecraft</a></li>
+ 
+ <li><a href="NetArt.html">NetArt</a></li>
+ 
+  <li><a href="about.html">About</a></li>
+
+</ul>
+
+</body>
+</html>
+
 <p style="text-align:center;"> The following Renders were created by a 3D computer program called "BLENDER"(1994). I have played around with "BLENDER" for years but never completed an art piece until this year. It was such an huge achievement and is a step closer to make creative projects via "BLENDER". The coffee + computer table was created in Digital Media Art 74 while the "Creeper" model was created for a 3D printer (twice) and Adobe Aero. </p>
 
 <p style="text-align:center;"><img src="Render1 copy.jpg" alt="Image">
@@ -63,10 +122,6 @@ p  {
  <p style="text-align:center;"><img src="Render2.jpg" alt="Image2">
 
 <hr>
-
-<p style="text-align:center;"> <a href="index.html">
-<img src="Back.jpg" alt="Click to enter"> </p>
-
 
 </body>
 </html>
