--- a/NetArt.html
+++ b/NetArt.html
@@ -55,6 +55,64 @@ p  {
 
 <p style="text-align:center;"><img src="NETART LOGO.jpg" alt="Logo">
 
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+}
+
+li {
+  float: left;
+  border-right:1px solid #bbb;
+}
+
+li:last-child {
+  border-right: none;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover:not(.active) {
+  background-color: #111;
+}
+
+.active {
+  background-color: #04AA6D;
+}
+</style>
+</head>
+<body>
+
+<ul>
+   <li><a href="index.html">Home</a></li>
+  
+ <li><a href="Glitch.html">Glitch Art</a></li>
+ 
+ <li><a href="Memes.html">Meme MashUp</a></li>
+ 
+ <li><a href="Minecraft.html">Minecraft</a></li>
+ 
+ <li><a href="NetArt.html">NetArt</a></li>
+ 
+  <li><a href="about.html">About</a></li>
+
+</ul>
+
+</body>
+</html>
+
 <p style="text-align:center;"> “NET ART 2025” is a point and click story time experience and  focuses on the artist’s feelings about art and technology (both the good and bad side).The story also includes self-awareness humor, memes, and a "lively banner" to feel comfy while reading.“NET ART 2025” parodies an internet / digital diary like LiveJournal and Wordpress and attempt to mimic the early 2000’s internet era. </p>
 
 <p style="text-align:center;"> Click the link below to view the NET ART: </p>
@@ -70,10 +128,6 @@ p  {
 <hr>
 
  <p style="text-align:center;"><img src="Net3.jpg" alt="Image3">
-
-<p style="text-align:center;"> <a href="index.html">
-<img src="Back.jpg" alt="Click to enter"> </p>
-
 
 </body>
 </html>
